fix isinstance in read

--- a/experiments/paper_plots.ipynb
+++ b/experiments/paper_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e587b2e0-a63c-4c43-98a3-2697e18317d7",
    "metadata": {},
    "outputs": [],
@@ -17,6 +17,7 @@
     "import scipy\n",
     "matplotlib.rcParams['pdf.fonttype'] = 42\n",
     "matplotlib.rcParams['ps.fonttype'] = 42\n",
+    "\n",
     "\n",
     "from neurovoc import bruce, reconstruct, specres\n",
     "\n",
@@ -44,17 +45,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "57a7bb61-17f2-4b73-86c1-ab5e1126323c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading file '456440__inspectorj__bird-whistling-robin-single-13.ogg' from 'https://librosa.org/data/audio/456440__inspectorj__bird-whistling-robin-single-13.ogg' to '/home/jacob/.cache/librosa'.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x763cfb3dcbb0>"
+       "<matplotlib.collections.QuadMesh at 0x7aa987435270>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "449480cd-9058-4c52-9cd0-ebf3c4f3f388",
    "metadata": {},
    "outputs": [],
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fda8076e-4fc8-43bf-81b9-0998181378d3",
    "metadata": {},
    "outputs": [],
